--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 
 <head>
-  <title>SWE101</title>
+  <title>High Card Game</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-  <h1 id="header">SWE101! 🚀</h1>
+  <h1 id="header">High Card Game! 🃏</h1>
   <!-- Import program logic -->
   <script src="script.js"></script>
 </body>
