--- a/index.html
+++ b/index.html
@@ -3,13 +3,105 @@
 
 <head>
   <title>SWE101</title>
-  <link rel="stylesheet" href="styles.css">
+  <style>
+    * {
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: sans-serif;
+      margin-left: 30px;
+      margin-right: 30px;
+    }
+
+    #header {
+      text-align: center;
+    }
+
+    #container {
+      margin: 40px auto;
+      padding: 38px 31px;
+      background-color: pink;
+      max-width: 800px;
+    }
+
+    input {
+      width: 70%;
+      margin: 0 4px 23px 0;
+      padding: 5px 9px;
+      font-size: 21px;
+      line-height: 33px;
+    }
+
+    button {
+      padding: 5px 6px;
+      font-size: 21px;
+      line-height: 33px;
+      margin: 0 0px 23px 0;
+      width: 25%;
+    }
+
+    #output {
+      margin: 20px auto;
+      padding: 20px;
+      background-color: silver;
+      width: 100%;
+    }
+
+    .card {
+      margin: 10px;
+      padding: 10px;
+      background-color: grey;
+      width: 50px;
+      text-align: center;
+      border-radius: 8px;
+      display: inline-block;
+    }
+
+    .suit {
+      margin: 5px;
+      font-size: 20px;
+    }
+
+    .name {
+      margin: 5px;
+      font-size: 24px;
+      font-weight: bold;
+      font-family: sans-serif;
+    }
+
+    .red {
+      color: red;
+    }
+
+    .card-container1 {
+      background-color: lightblue;
+      margin: 20px;
+      border-radius: 10px;
+    }
+
+    .card-container2 {
+      background-color: lightgreen;
+      margin: 20px;
+      border-radius: 10px;
+    }
+
+    .card-container3 {
+      background-color: peachpuff;
+      margin: 20px;
+      border-radius: 10px;
+    }
+  </style>
 </head>
 
 <body>
   <h1 id="header">SWE101! 🚀</h1>
+
   <!-- Import program logic -->
   <script src="script.js"></script>
+  <!-- Define button click functionality -->
+  <script>
+  </script>
 </body>
 
 </html>
