--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
 
   <body>
-    <h1 id="header">SWE101! 🚀</h1>
+    <h1 id="header">High Card 🃏</h1>
     <!-- Import program logic -->
     <script src="script.js"></script>
   </body>
