--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <h1 id="header">SWE101! 🚀</h1>
     <!-- Import program logic -->
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
