--- a/index.html
+++ b/index.html
@@ -1,12 +1,77 @@
 <!DOCTYPE html>
-<html>
+<html>  
   <head>
-    <title>SWE101</title>
+    <title>High Card</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
 
-  <body>
-    <h1 id="header">SWE101! 🚀</h1>
+  <body> 
+    <header class="header">
+      <h1 id="header">High Card Game 🃏 </h1>
+    </header>
+    
+    <div class="container">
+
+      <div class="instructions-container">
+        <!-- Contents of instructions-text changed with Javascript -->
+        <h2 class="instructions-text">Player 1 goes first</h2>
+      </div>
+
+      <div class="table-container">
+        <!-- Player's cards go here -->
+        <div class="player-card player-one-card">
+          <div class="card-name card"></div>
+          <div class="card-suit card"></div>
+        </div>
+
+        <div class="player-card player-two-card">
+          <div class="card-name card"></div>
+          <div class="card-suit card"></div>
+        </div>
+      </div>
+
+      <!-- Winner announcement -->
+      <div class="results-container">
+        <h1 class="results-text">Player 1 wins!</h1>
+
+        <div class="player-actions-container">
+          <button class="replay-btn results-btn">Replay</button>
+          <button class="end-game-btn results-btn">End Game</button>
+        </div>
+
+      </div>
+
+      <div class="player-actions-container">
+        <!-- Player draws cards here -->
+        <!-- Action buttons disappear when winner announcement is turned on -->
+        <div class="player-action">
+          <h3>Player 1</h3>
+          <button class="draw-card player-one-draw">Draw</button>
+        </div>
+
+        <div class="player-action">
+          <h3>Player 2</h3>
+          <button class="draw-card player-two-draw">Draw</button>
+        </div>
+
+      </div>
+
+      <div class="score-container">
+        <!-- Player's score -->
+        <div class="player-score">
+          <h3>Score</h3>
+          <h3 class="player-one-score">0</h3>
+        </div>
+
+        <div class="player-score">
+          <h3>Score</h3>
+          <h3 class="player-two-score">0</h3>
+        </div>
+      </div>
+      
+
+    </div>
+
     <!-- Import program logic -->
     <script src="script.js"></script>
   </body>
