--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
-<html>  
+<html>
   <head>
     <title>High Card</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
 
-  <body> 
+  <body>
     <header class="header">
-      <h1 id="header">High Card Game 🃏 </h1>
+      <h1 id="header">Difference Card Game 🃏</h1>
     </header>
-    
-    <div class="container">
 
+    <div class="container">
       <div class="instructions-container">
         <!-- Contents of instructions-text changed with Javascript -->
         <h2 class="instructions-text">Player 1 goes first</h2>
@@ -38,7 +37,6 @@
           <button class="replay-btn results-btn">Replay</button>
           <button class="end-game-btn results-btn">End Game</button>
         </div>
-
       </div>
 
       <div class="player-actions-container">
@@ -53,7 +51,6 @@
           <h3>Player 2</h3>
           <button class="draw-card player-two-draw">Draw</button>
         </div>
-
       </div>
 
       <div class="score-container">
@@ -68,8 +65,6 @@
           <h3 class="player-two-score">0</h3>
         </div>
       </div>
-      
-
     </div>
 
     <!-- Import program logic -->
