--- a/index.html
+++ b/index.html
@@ -1,12 +1,44 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>SWE101</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>HIGH CARD GAME</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles.css" />
   </head>
 
   <body>
-    <h1 id="header">SWE101! 🚀</h1>
+    <h1 id="header">HIGH CARD</h1>
+    <section class="main-container">
+      <div class="score-board">
+        <h4 class="player-1-score">Score:</h4>
+        <h2>Scoreboard</h2>
+        <h4 class="player-2-score">Score:</h4>
+      </div>
+      <div class="game-content">
+        <div class="player-container player-1-container player-turn">
+          <div class="player-content">
+            <h2>Player 1</h2>
+            <!-- <h4 class="player-result player-1-result">Result</h4> -->
+          </div>
+          <div class="card-container player-1-card"></div>
+        </div>
+        <div class="player-container player-2-container">
+          <div class="player-content">
+            <h2>Player 2</h2>
+            <!-- <h4 class="player-result player-2-result">Result</h4> -->
+          </div>
+          <div class="card-container player-2-card"></div>
+        </div>
+      </div>
+      <h4 class="cardsLeft">Cards left: 52</h4>
+    </section>
     <!-- Import program logic -->
     <script src="script.js"></script>
   </body>
