updated the game to create cards using javascript as the draw button is clicked

--- a/index.html
+++ b/index.html
@@ -17,17 +17,21 @@
       </div>
 
       <div class="table-container">
-        <!-- Player's cards go here -->
-        <div class="player-card player-one-card">
-          <div class="card-name card"></div>
-          <div class="card-suit card"></div>
-        </div>
-
-        <div class="player-card player-two-card">
-          <div class="card-name card"></div>
-          <div class="card-suit card"></div>
-        </div>
+        <div class="player-one-hand"></div>
+        <div class="player-two-hand"></div>
       </div>
+      <!-- Player's cards go here -->
+
+      <!-- <div class="player-card player-one-card">
+            <div class="card-name card"></div>
+            <div class="card-suit card"></div>
+          </div>
+
+          <div class="player-card player-two-card">
+            <div class="card-name card"></div>
+            <div class="card-suit card"></div>
+          </div>
+        </div> -->
 
       <!-- Winner announcement -->
       <div class="results-container">
