--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <body>
     <h1 id="header">Rocket Academy Bootcamp! 🚀</h1>
-    <h2>High Card</h2>
+    <h2>High / Low Card</h2>
     <!-- Import program logic -->
     <script src="script.js"></script>
   </body>
