--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
 
   <body>
     <h1 id="header">SWE101! 🚀</h1>
+    <!--
+    <div class="container">
+      <div class="card">
+        <div class="name red">3</div>
+        <div class="suit">♥️</div>
+      </div>
+      <div class="card">
+        <div class="name red">4</div>
+        <div class="suit">♥️</div>
+      </div>
+    </div>
+    -->
     <!-- Import program logic -->
     <script src="script.js"></script>
   </body>
