--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
     </div>
     -->
     <!-- Import program logic -->
-    <script src="script.js"></script>
+    <script src="script2.js"></script>
   </body>
 </html>
